--- a/index.html
+++ b/index.html
@@ -1,9 +1,92 @@
 <!DOCTYPE html>
-<html>
+<html lang='en'>
 <head>
+<meta charset='utf-8'>
 <link rel="stylesheet" href="./index_files/twitter_core.bundle.css">
 <link rel="stylesheet" href="./index_files/twitter_more_1.bundle.css">
 <link rel="stylesheet" href="./index_files/twitter_more_2.bundle.css">
+<script>
+function strftime(sFormat, date) {
+  if (!(date instanceof Date)) date = new Date();
+  var nDay = date.getDay(),
+    nDate = date.getDate(),
+    nMonth = date.getMonth(),
+    nYear = date.getFullYear(),
+    nHour = date.getHours(),
+    aDays = ['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday'],
+    aMonths = ['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December'],
+    aDayCount = [0, 31, 59, 90, 120, 151, 181, 212, 243, 273, 304, 334],
+    isLeapYear = function() {
+      if ((nYear&3)!==0) return false;
+      return nYear%100!==0 || nYear%400===0;
+    },
+    getThursday = function() {
+      var target = new Date(date);
+      target.setDate(nDate - ((nDay+6)%7) + 3);
+      return target;
+    },
+    zeroPad = function(nNum, nPad) {
+      return ('' + (Math.pow(10, nPad) + nNum)).slice(1);
+    };
+  return sFormat.replace(/%[a-z]/gi, function(sMatch) {
+    return {
+      '%a': aDays[nDay].slice(0,3),
+      '%A': aDays[nDay],
+      '%b': aMonths[nMonth].slice(0,3),
+      '%B': aMonths[nMonth],
+      '%c': date.toUTCString(),
+      '%C': Math.floor(nYear/100),
+      '%d': zeroPad(nDate, 2),
+      '%e': nDate,
+      '%F': date.toISOString().slice(0,10),
+      '%G': getThursday().getFullYear(),
+      '%g': ('' + getThursday().getFullYear()).slice(2),
+      '%H': zeroPad(nHour, 2),
+      '%I': zeroPad((nHour+11)%12 + 1, 2),
+      '%j': zeroPad(aDayCount[nMonth] + nDate + ((nMonth>1 && isLeapYear()) ? 1 : 0), 3),
+      '%k': '' + nHour,
+      '%l': (nHour+11)%12 + 1,
+      '%m': zeroPad(nMonth + 1, 2),
+      '%M': zeroPad(date.getMinutes(), 2),
+      '%p': (nHour<12) ? 'AM' : 'PM',
+      '%P': (nHour<12) ? 'am' : 'pm',
+      '%s': Math.round(date.getTime()/1000),
+      '%S': zeroPad(date.getSeconds(), 2),
+      '%u': nDay || 7,
+      '%V': (function() {
+              var target = getThursday(),
+                n1stThu = target.valueOf();
+              target.setMonth(0, 1);
+              var nJan1 = target.getDay();
+              if (nJan1!==4) target.setMonth(0, 1 + ((4-nJan1)+7)%7);
+              return zeroPad(1 + Math.ceil((n1stThu-target)/604800000), 2);
+            })(),
+      '%w': '' + nDay,
+      '%x': date.toLocaleDateString(),
+      '%X': date.toLocaleTimeString(),
+      '%y': ('' + nYear).slice(2),
+      '%Y': nYear,
+      '%z': date.toTimeString().replace(/.+GMT([+-]\d+).+/, '$1'),
+      '%Z': date.toTimeString().replace(/.+\((.+?)\)$/, '$1')
+    }[sMatch] || sMatch;
+  });
+}
+
+document.addEventListener('DOMContentLoaded', function(event) {
+    document.getElementById('timestamp').innerHTML = strftime('%H:%M %p - %d %b %Y');
+
+    if (window.location.href.lastIndexOf('?') != -1) {
+    	saying = window.location.href;
+    	saying = saying.substring(saying.lastIndexOf('?') + 1);
+    	saying = saying.replace(/#\w+/g, function(hashtag) {
+		hashtag = hashtag.substring(1);
+		return '<a href="/hashtag/'+hashtag+'?src=hash" data-query-source="hashtag_click" class="twitter-hashtag pretty-link js-nav" dir="ltr"><s>#</s><b>'+hashtag+'</b></a>';
+    	});
+
+    	document.getElementById('trumpsay').innerHTML = decodeURIComponent(saying); 
+    }
+});
+</script>
 </head>
 <body>
 <div role="main" class="permalink light-inline-actions  stream-uncapped has-replies original-permalink-page">
@@ -118,7 +201,7 @@
 
       
         <div class="js-tweet-text-container">
-  <p class="TweetTextSize TweetTextSize--26px js-tweet-text tweet-text" lang="en" data-aria-label-part="0">The <a href="file:///hashtag/MarchForLife?src=hash" data-query-source="hashtag_click" class="twitter-hashtag pretty-link js-nav" dir="ltr"><s>#</s><b>MarchForLife</b></a> is so important. To all of you marching --- you have my full support!</p>
+  <p class="TweetTextSize TweetTextSize--26px js-tweet-text tweet-text" lang="en" data-aria-label-part="0" id='trumpsay'>The <a href="/hashtag/MarchForLife?src=hash" data-query-source="hashtag_click" class="twitter-hashtag pretty-link js-nav" dir="ltr"><s>#</s><b>MarchForLife</b></a> is so important. To all of you marching --- you have my full support!</p>
 </div>
 
 
@@ -183,7 +266,7 @@
 
   <div class="client-and-actions">
   <span class="metadata">
-    <span>12:27 AM - 28 Jan 2017</span>
+    <span id='timestamp'>12:27 AM - 28 Jan 2017</span>
       
   </span>
 </div>
